Background image added in act 2

--- a/act2/table.html
+++ b/act2/table.html
@@ -5,42 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wuthering Waves</title>
 </head>
-<body style="text-align: center; font-family: arial, sans-serif;">
+<body style ="
+      background-image: url('../images/skbg.jpg');
+      background-size: cover;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      ">
+
+
 
   <h1 style="margin:20px; color:#333;">Wuthering Waves Characters</h1>
 
   <table style="margin: 0 auto; border-collapse: collapse;">
     <tr>
-      <td style="padding:15px; border:2px solid #444;background:#fff;">
+      <td rowspan="2" style="padding:15px; border:2px solid #444; text-align: center;">
         <a href="https://game8.co/games/Wuthering-Waves/archives/524890" target="_blank">
           <img src="../images/augusta.png" alt="Augusta" style="width:200px; height:auto; margin:auto;">
         </a>
       </td>
-      <td style="padding:15px; border:2px solid #444;background:#fff;">
+      <td style="padding:15px; border:2px solid #444;">
         <a href="https://game8.co/games/Wuthering-Waves/archives/486245" target="_blank">
-          <img src="../images/brant.png" alt="Brant" style="width:200px; height:auto; margin:auto;">
+          <img src="../images/brant.png" alt="Brant" style="width:150px; height:auto; margin:auto;">
         </a>
       </td>
-      <td style="padding:15px; border:2px solid #444;background:#fff;">
+      <td style="padding:15px; border:2px solid #444;">
         <a href="https://game8.co/games/Wuthering-Waves/archives/473332" target="_blank">
-          <img src="../images/camellya.png" alt="Camellya" style="width:200px; height:auto; margin:auto;">
+          <img src="../images/camellya.png" alt="Camellya" style="width:150px; height:auto; margin:auto;">
         </a>
       </td>
     </tr>
     <tr>
-      <td style="padding:15px; border:2px solid #444;background:#fff;">
+      <td style="padding:15px; border:2px solid #444;">
         <a href="https://game8.co/games/Wuthering-Waves/archives/500493" target="_blank">
-          <img src="../images/cantarella.png" alt="Cantarella" style="width:200px; height:auto; margin:auto;">
+          <img src="../images/cantarella.png" alt="Cantarella" style="width:150px; height:auto; margin:auto;">
         </a>
       </td>
-      <td style="padding:15px; border:2px solid #444;background:#fff;">
+      <td style="padding:15px; border:2px solid #444;">
         <a href="https://game8.co/games/Wuthering-Waves/archives/486251" target="_blank">
-          <img src="../images/carlotta.png" alt="Carlotta" style="width:200px; height:auto; margin:auto;">
-        </a>
-      </td>
-      <td style="padding:15px; border:2px solid #444;background:#fff;">
-        <a href="https://game8.co/games/Wuthering-Waves/archives/507777" target="_blank">
-          <img src="../images/cartethyia.png" alt="Cartethyia" style="width:200px; height:auto; margin:auto;">
+          <img src="../images/carlotta.png" alt="Carlotta" style="width:150px; height:auto; margin:auto;">
         </a>
       </td>
     </tr>
@@ -73,9 +75,26 @@
           </tr>
         </table>
       </td>
-      <td colspan="2" style="padding:15px; border:2px solid #444; background:#fff;">
+      <td colspan="2" style="padding:15px; border:2px solid #444; text-align: center;">
         <a href="https://game8.co/games/Wuthering-Waves/archives/524880" target="_blank">
           <img src="../images/chisa.png" alt="Chisa" style="width:230px; height: auto;">
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td style="padding:15px; border:2px solid #444;">
+        <a href="https://game8.co/games/Wuthering-Waves/archives/461497" target="_blank">
+          <img src="../images/zhezi.png" alt="Zhezhi" style="width:150px; height:auto; margin:auto;">
+        </a>
+      </td>
+      <td style="padding:15px; border:2px solid #444;">
+        <a href="https://game8.co/games/Wuthering-Waves/archives/461501" target="_blank">
+          <img src="../images/xy.png" alt="Xiangli Yao" style="width:150px; height:auto; margin:auto;">
+        </a>
+      </td>
+      <td style="padding:15px; border:2px solid #444;">
+        <a href="https://game8.co/games/Wuthering-Waves/archives/486244" target="_blank">
+          <img src="../images/phoebe.png" alt="Phoebe" style="width:150px; height:auto; margin:auto;">
         </a>
       </td>
     </tr>
