--- a/act2/table.html
+++ b/act2/table.html
@@ -82,7 +82,7 @@
       </td>
     </tr>
     <tr>
-      <td style="padding:15px; border:2px solid #444;">
+      <td style="padding:15px; border:2px solid #444; text-align:center;">
         <a href="https://game8.co/games/Wuthering-Waves/archives/461497" target="_blank">
           <img src="../images/zhezi.png" alt="Zhezhi" style="width:150px; height:auto; margin:auto;">
         </a>
