--- a/act5/Home.html
+++ b/act5/Home.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
             <a href="Home.html">Home</a>
-            <a href="Projects.html">Projects</a>
+            <a href="projects.html">Projects</a>
             <a href="profile.html">Profile</a>
             <a href="Contact.html">Contact</a>
             </ul>
