--- a/lab1/contact.html
+++ b/lab1/contact.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
         <header>
@@ -23,12 +25,13 @@
   <p>If you’d like to get in touch, feel free to reach out using the form below or via my social links.</p>
 
   <div class="contact-container">
-    <div class="info">
-      <p><strong>Email:</strong> diograciasj@gmail.com</p>
-      <p><strong>Phone:</strong> +63 915 403 3407</p>
-      <p><strong>Facebook:</strong> https://www.facebook.com/jm.dgrcs</p>
-      <p><strong>Github:</strong> https://github.com/terem024</p>
-    </div>
+<div class="social-icons">
+  <a href="mailto:diograciasj@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+  <a href="tel:+639154033407" target="_blank"><i class="fa-solid fa-phone"></i></a>
+  <a href="https://www.facebook.com/jm.dgrcs" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+  <a href="https://github.com/terem024" target="_blank"><i class="fa-brands fa-github"></i></a>
+</div>
+
 
     <form class="form">
       <input type="text" name="name" placeholder="Your Name" required>
