--- a/lab1/Home.html
+++ b/lab1/Home.html
@@ -29,7 +29,7 @@
                 Welcome to my personal website, feel free to explore my projects and get to know more about me.
                 </p>
         <div class="right">
-            <img src="../images/jeem.png" alt="Jm">
+            <img src="../images/jeem1.png" alt="Jm">
         </div>
     </main>
 </body>
